// <auto-generated />
using System;
using Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace OpenMRSmoduleBackend.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    partial class ApplicationDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.8")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Domain.AppointmentNotification", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc");

                    b.Property<string>("EncounterId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("encounter_id");

                    b.Property<DateTime?>("EndUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("end_utc");

                    b.Property<string>("InstructionsEncrypted")
                        .HasColumnType("text")
                        .HasColumnName("instructions_encrypted");

                    b.Property<bool>("IsCancelled")
                        .HasColumnType("boolean")
                        .HasColumnName("is_cancelled");

                    b.Property<string>("LastEventId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("last_event_id");

                    b.Property<string>("LocationEncrypted")
                        .HasColumnType("text")
                        .HasColumnName("location_encrypted");

                    b.Property<string>("OrganizationId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("organization_id");

                    b.Property<string>("PatientDisplayEncrypted")
                        .HasColumnType("text")
                        .HasColumnName("patient_display_encrypted");

                    b.Property<string>("PatientIdEncrypted")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("patient_id_encrypted");

                    b.Property<string>("ServiceTypeEncrypted")
                        .HasColumnType("text")
                        .HasColumnName("service_type_encrypted");

                    b.Property<DateTime>("StartUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("start_utc");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("status");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("OrganizationId", "EncounterId")
                        .IsUnique();

                    b.ToTable("appointment_notifications", (string)null);
                });

            modelBuilder.Entity("Domain.MessageLog", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("ErrorCode")
                        .HasColumnType("text")
                        .HasColumnName("error_code");

                    b.Property<int>("FailedCount")
                        .HasColumnType("integer")
                        .HasColumnName("failed_count");

                    b.Property<string>("MessageType")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("message_type");

                    b.Property<string>("Provider")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("provider");

                    b.Property<string>("ProviderMessageId")
                        .HasColumnType("text")
                        .HasColumnName("provider_message_id");

                    b.Property<int>("RecipientCount")
                        .HasColumnType("integer")
                        .HasColumnName("recipient_count");

                    b.Property<DateTime>("SentAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("sent_at");

                    b.Property<string>("SentByUserId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("sent_by_user_id");

                    b.Property<bool>("Success")
                        .HasColumnType("boolean")
                        .HasColumnName("success");

                    b.HasKey("Id");

                    b.HasIndex("SentAt");

                    b.ToTable("message_logs", (string)null);
                });

            modelBuilder.Entity("Domain.MessageTemplate", b =>
                {
                    b.Property<string>("Window")
                        .HasColumnType("text")
                        .HasColumnName("window");

                    b.Property<string>("Body")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("body");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Window");

                    b.ToTable("message_templates", (string)null);
                });

            modelBuilder.Entity("Domain.OrganizationIntegrationConfig", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc");

                    b.Property<string>("DefaultProvider")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("default_provider");

                    b.Property<bool>("Enabled")
                        .HasColumnType("boolean")
                        .HasColumnName("enabled");

                    b.Property<int>("MaxDeliveryAttempts")
                        .HasColumnType("integer")
                        .HasColumnName("max_delivery_attempts");

                    b.Property<string>("OpenMrsBaseUrl")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("openmrs_base_url");

                    b.Property<string>("OpenMrsPasswordEncrypted")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("openmrs_password_encrypted");

                    b.Property<string>("OpenMrsUsernameEncrypted")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("openmrs_username_encrypted");

                    b.Property<string>("OrganizationId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("organization_id");

                    b.Property<bool>("PollerEnabled")
                        .HasColumnType("boolean")
                        .HasColumnName("poller_enabled");

                    b.Property<int>("PollerIntervalMinutes")
                        .HasColumnType("integer")
                        .HasColumnName("poller_interval_minutes");

                    b.Property<int>("PollerLookaheadHours")
                        .HasColumnType("integer")
                        .HasColumnName("poller_lookahead_hours");

                    b.Property<int>("RetryBaseDelaySeconds")
                        .HasColumnType("integer")
                        .HasColumnName("retry_base_delay_seconds");

                    b.Property<int>("RetryMaxDelayMinutes")
                        .HasColumnType("integer")
                        .HasColumnName("retry_max_delay_minutes");

                    b.Property<string>("TimeZoneId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("time_zone_id");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc");

                    b.Property<string>("WebhookSecretEncrypted")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("webhook_secret_encrypted");

                    b.HasKey("Id");

                    b.HasIndex("OrganizationId")
                        .IsUnique();

                    b.ToTable("organization_integration_configs", (string)null);
                });

            modelBuilder.Entity("Domain.OrganizationProviderConfig", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("BaseUrl")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("base_url");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc");

                    b.Property<string>("CredentialsJsonEncrypted")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("credentials_json_encrypted");

                    b.Property<bool>("Enabled")
                        .HasColumnType("boolean")
                        .HasColumnName("enabled");

                    b.Property<string>("OrganizationId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("organization_id");

                    b.Property<string>("ProviderName")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("provider_name");

                    b.Property<string>("StudentGroup")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("student_group");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("OrganizationId", "ProviderName")
                        .IsUnique();

                    b.ToTable("organization_provider_configs", (string)null);
                });

            modelBuilder.Entity("Domain.ReminderLog", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("EncounterId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("encounter_id");

                    b.Property<string>("EncounterIdHash")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("encounter_id_hash");

                    b.Property<DateTime>("EncounterStart")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("encounter_start");

                    b.Property<string>("ErrorCode")
                        .HasColumnType("text")
                        .HasColumnName("error_code");

                    b.Property<string>("Provider")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("provider");

                    b.Property<string>("ReminderWindow")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("reminder_window");

                    b.Property<DateTime>("SentAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("sent_at");

                    b.Property<bool>("Success")
                        .HasColumnType("boolean")
                        .HasColumnName("success");

                    b.HasKey("Id");

                    b.HasIndex("EncounterIdHash", "ReminderWindow");

                    b.ToTable("reminder_logs", (string)null);
                });

            modelBuilder.Entity("Domain.ScheduledReminder", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("AppointmentNotificationId")
                        .HasColumnType("uuid")
                        .HasColumnName("appointment_notification_id");

                    b.Property<int>("AttemptCount")
                        .HasColumnType("integer")
                        .HasColumnName("attempt_count");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc");

                    b.Property<string>("EncounterId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("encounter_id");

                    b.Property<DateTime?>("LastAttemptAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_attempt_at_utc");

                    b.Property<string>("LastErrorCode")
                        .HasColumnType("text")
                        .HasColumnName("last_error_code");

                    b.Property<int>("MaxAttempts")
                        .HasColumnType("integer")
                        .HasColumnName("max_attempts");

                    b.Property<DateTime?>("NextAttemptAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("next_attempt_at_utc");

                    b.Property<string>("OrganizationId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("organization_id");

                    b.Property<string>("Provider")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("provider");

                    b.Property<string>("ProviderMessageId")
                        .HasColumnType("text")
                        .HasColumnName("provider_message_id");

                    b.Property<string>("ReminderWindow")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("reminder_window");

                    b.Property<int>("RetryBaseDelaySeconds")
                        .HasColumnType("integer")
                        .HasColumnName("retry_base_delay_seconds");

                    b.Property<int>("RetryMaxDelayMinutes")
                        .HasColumnType("integer")
                        .HasColumnName("retry_max_delay_minutes");

                    b.Property<DateTime>("ScheduledForUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("scheduled_for_utc");

                    b.Property<DateTime?>("SentAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("sent_at_utc");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("status");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc");

                    b.HasKey("Id");

                    b.HasIndex("AppointmentNotificationId", "ReminderWindow");

                    b.HasIndex("Status", "NextAttemptAtUtc");

                    b.HasIndex("Status", "ScheduledForUtc");

                    b.ToTable("scheduled_reminders", (string)null);
                });

            modelBuilder.Entity("Domain.WebhookEventLog", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<bool>("Duplicate")
                        .HasColumnType("boolean")
                        .HasColumnName("duplicate");

                    b.Property<string>("ErrorCode")
                        .HasColumnType("text")
                        .HasColumnName("error_code");

                    b.Property<string>("EventId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("event_id");

                    b.Property<DateTimeOffset>("EventTimestamp")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("event_timestamp");

                    b.Property<string>("EventType")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("event_type");

                    b.Property<string>("OrganizationId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("organization_id");

                    b.Property<string>("PayloadSha256")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("payload_sha256");

                    b.Property<bool>("Processed")
                        .HasColumnType("boolean")
                        .HasColumnName("processed");

                    b.Property<DateTime>("ReceivedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("received_at_utc");

                    b.Property<string>("ResourceId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("resource_id");

                    b.Property<string>("ResourceType")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("resource_type");

                    b.HasKey("Id");

                    b.HasIndex("EventId")
                        .IsUnique();

                    b.HasIndex("ReceivedAtUtc");

                    b.ToTable("webhook_event_logs", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRole", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("text");

                    b.Property<string>("ConcurrencyStamp")
                        .IsConcurrencyToken()
                        .HasColumnType("text");

                    b.Property<string>("Name")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("NormalizedName")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.HasKey("Id");

                    b.HasIndex("NormalizedName")
                        .IsUnique()
                        .HasDatabaseName("RoleNameIndex");

                    b.ToTable("AspNetRoles", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRoleClaim<string>", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ClaimType")
                        .HasColumnType("text");

                    b.Property<string>("ClaimValue")
                        .HasColumnType("text");

                    b.Property<string>("RoleId")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("RoleId");

                    b.ToTable("AspNetRoleClaims", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUser", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("text");

                    b.Property<int>("AccessFailedCount")
                        .HasColumnType("integer");

                    b.Property<string>("ConcurrencyStamp")
                        .IsConcurrencyToken()
                        .HasColumnType("text");

                    b.Property<string>("Email")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<bool>("EmailConfirmed")
                        .HasColumnType("boolean");

                    b.Property<bool>("LockoutEnabled")
                        .HasColumnType("boolean");

                    b.Property<DateTimeOffset?>("LockoutEnd")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("NormalizedEmail")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("NormalizedUserName")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("PasswordHash")
                        .HasColumnType("text");

                    b.Property<string>("PhoneNumber")
                        .HasColumnType("text");

                    b.Property<bool>("PhoneNumberConfirmed")
                        .HasColumnType("boolean");

                    b.Property<string>("SecurityStamp")
                        .HasColumnType("text");

                    b.Property<bool>("TwoFactorEnabled")
                        .HasColumnType("boolean");

                    b.Property<string>("UserName")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.HasKey("Id");

                    b.HasIndex("NormalizedEmail")
                        .HasDatabaseName("EmailIndex");

                    b.HasIndex("NormalizedUserName")
                        .IsUnique()
                        .HasDatabaseName("UserNameIndex");

                    b.ToTable("AspNetUsers", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserClaim<string>", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ClaimType")
                        .HasColumnType("text");

                    b.Property<string>("ClaimValue")
                        .HasColumnType("text");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("AspNetUserClaims", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserLogin<string>", b =>
                {
                    b.Property<string>("LoginProvider")
                        .HasColumnType("text");

                    b.Property<string>("ProviderKey")
                        .HasColumnType("text");

                    b.Property<string>("ProviderDisplayName")
                        .HasColumnType("text");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("LoginProvider", "ProviderKey");

                    b.HasIndex("UserId");

                    b.ToTable("AspNetUserLogins", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserRole<string>", b =>
                {
                    b.Property<string>("UserId")
                        .HasColumnType("text");

                    b.Property<string>("RoleId")
                        .HasColumnType("text");

                    b.HasKey("UserId", "RoleId");

                    b.HasIndex("RoleId");

                    b.ToTable("AspNetUserRoles", (string)null);
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserToken<string>", b =>
                {
                    b.Property<string>("UserId")
                        .HasColumnType("text");

                    b.Property<string>("LoginProvider")
                        .HasColumnType("text");

                    b.Property<string>("Name")
                        .HasColumnType("text");

                    b.Property<string>("Value")
                        .HasColumnType("text");

                    b.HasKey("UserId", "LoginProvider", "Name");

                    b.ToTable("AspNetUserTokens", (string)null);
                });

            modelBuilder.Entity("Domain.ScheduledReminder", b =>
                {
                    b.HasOne("Domain.AppointmentNotification", "AppointmentNotification")
                        .WithMany("ScheduledReminders")
                        .HasForeignKey("AppointmentNotificationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("AppointmentNotification");
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRoleClaim<string>", b =>
                {
                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityRole", null)
                        .WithMany()
                        .HasForeignKey("RoleId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserClaim<string>", b =>
                {
                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityUser", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserLogin<string>", b =>
                {
                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityUser", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserRole<string>", b =>
                {
                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityRole", null)
                        .WithMany()
                        .HasForeignKey("RoleId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityUser", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserToken<string>", b =>
                {
                    b.HasOne("Microsoft.AspNetCore.Identity.IdentityUser", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Domain.AppointmentNotification", b =>
                {
                    b.Navigation("ScheduledReminders");
                });
#pragma warning restore 612, 618
        }
    }
}
